@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.463 2005/11/06 19:43:31 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.464 2005/11/06 21:18:35 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
@@ -12,6 +12,7 @@
   src/net/server/handlers/WebGLIHandler.py:
   added support for creating generic disks
   add new partition working
+  save and delete partitions
 
   6 Nov 2005; Preston Cody <codeman@gentoo.org>
   webgli: Partitioning making progress.
